# anki_generator

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: DOCKER.md  Dockerfile
src/anki_gen/: __init__.py  app.py  card_generator.py  gemini_client.py
