[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-card-creator"
version = "1.0.0"
description = "AI-powered Anki flashcard generator using Google Gemini and Gradio"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pablo", email = "pablo@example.com"}
]
maintainers = [
    {name = "Pablo", email = "pablo@example.com"}
]
keywords = ["anki", "flashcards", "ai", "gemini", "gradio", "ocr", "study", "education"]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
include = ["anki_gen*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.toml"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true